ECA-1879: Administration of AdminEntities and AdminGroups was extracted from AuthenticationSessionBean and injected into AdminEntitySessionBean and AdminGroupSessionBean respectively. In addition, a session bean for handling AuthorizationTreeUpdateData was created in order to avoid a circular dependency. The reason for this change was to follow the CeSeCore specification, which separates "Access Controls" and "Roles".
Additionally, while bug hunting, CAsTest was modified to preemtively clean the field, a test was added in AuthorizationSessionTest to guard against EJBCA being installed without a working SuperAdmin couple to AdminCA1. Some cleaning was also done in affected classes. 

git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10295 37aeb1de-b14b-0410-9a0e-82b28170d228